--- a/archive/archive_model/model_basic.ipynb
+++ b/archive/archive_model/model_basic.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
     "        # Simple Question for Document Collection\n",
     "            answer = session.query(\n",
     "            message= msg,\n",
-    "            system_prompt ='Recommend not more than 5 music. Return spotify_id at the end of each song.',\n",
+    "            system_prompt ='Recommend not more than 5 music. MUST return spotify_id at the end of each song.',\n",
     "            rag_config={\n",
     "                \"rag_type\": \"rag\",\n",
     "            },\n",
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -223,13 +223,13 @@
      "text": [
       "Here are five songs that you might find comforting when you're feeling down, based on the information provided in the document:\n",
       "\n",
-      "1. \"Yesterday\" by The Beatles (page 17, row 1) - Spotify ID: 6FRwDxXsvSasw0y2eDArsz\n",
-      "2. \"The Sound of Silence\" by Simon & Garfunkel (page 18, row 2) - Spotify ID: 5uvosCdMlFdTXhoazkTI5R\n",
-      "3. \"Imagine\" by John Lennon (page 19, row 1) - Spotify ID: 6mHOcVtsHLMuesJkswc0GZ\n",
-      "4. \"Hallelujah\" by Leonard Cohen (page 20, row 2) - Spotify ID: 0sgDEFq9oeC8ueOK0mR5IA\n",
-      "5. \"Someone Like You\" by Adele (page 20, row 3) - Spotify ID: 4KfSdst7rW39C0sfhArdrz\n",
+      "1. \"Yesterday\" by The Beatles (page 17, row 1, spotify\\_id: \"6FRwDxXsvSasw0y2eDArsz\")\n",
+      "2. \"Imagine\" by John Lennon (page 17, row 2, spotify\\_id: \"1bp2IO61zbQrbWNmKKxg3f\")\n",
+      "3. \"Hallelujah\" by Leonard Cohen (page 17, row 3, spotify\\_id: \"3qiyyUfYe7CRYLucrPmulD\")\n",
+      "4. \"Someone Like You\" by Adele (page 18, row 1, spotify\\_id: \"5uvosCdMlFdTXhoazkTI5R\")\n",
+      "5. \"Fix You\" by Coldplay (page 18, row 2, spotify\\_id: \"6mHOcVtsHLMuesJkswc0GZ\")\n",
       "\n",
-      "Please note that these songs were chosen based on their genre (rock and soul) and the fact that they have been recognized as emotionally evocative by some listeners. However, everyone's musical tastes and emotional responses are different, so these songs may not have the same effect on you as they have on others.\n"
+      "Please note that these song recommendations are based solely on the data provided in the document and do not take into account personal preferences or musical tastes.\n"
      ]
     }
    ],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -266,64 +266,298 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ans2 = spot_extraction(\"music that i can dance to the most. Return the spotify id too\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Based on the \"danceability\" feature in the given dataset, here are five songs that have high danceability scores:\n",
+      "\n",
+      "1. \"Kinetic (The Crystal Method vs. Dada Life)\" by The Crystal Method, with a danceability score of 0.616. Spotify ID: 6s0yNmp4Hd32wGx40T6uL8\n",
+      "2. \"Galvanize\" by The Chemical Brothers, with a danceability score of 0.745. Spotify ID: 4bz7uB4edifWKJXSDxwHcs\n",
+      "3. \"God Is a DJ\" by Faithless, with a danceability score of 0.606. Spotify ID: 1pUFYb9peWkK8m1WCKNRjp\n",
+      "4. \"In Yer Face - Bicep Remix\" by 808 State, with a danceability score of 0.616. Spotify ID: 6DxKG8EHEqkWdKrFQSvm32\n",
+      "5. \"Teardrop\" by Massive Attack, with a danceability score of 0.615. Spotify ID: 67Hna13dNDkZvBpTXRIaOJ\n",
+      "\n",
+      "Note that these recommendations are based solely on the danceability metric and do not take into account other factors such as genre, tempo, or personal preference.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ans2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_link(text):\n",
     "    lines = text.split('\\n')\n",
     "    lines = [line.strip() for line in lines if line.strip()]\n",
-    "    spotify_id_pattern = r'spotify\\\\_id: ([a-zA-Z0-9]+)'\n",
+    "    regex_pattern =  r'\\b[A-Za-z0-9]{22}\\b'\n",
+    "\n",
     "    # Extracting Spotify IDs\n",
     "    spotify_ids = []\n",
-    "    for line in lines:\n",
-    "        match = re.search(spotify_id_pattern, line)\n",
+    "    for string in lines:\n",
+    "        match = re.findall(regex_pattern, string)\n",
     "        if match:\n",
-    "            spotify_ids.append(match.group(1))\n",
-    "\n",
+    "            spotify_ids.append(match)\n",
+    "    \n",
     "    #output clickable links\n",
     "    for idx, spotify_id in enumerate(spotify_ids, start=1):\n",
-    "        link = f\"https://open.spotify.com/track/{spotify_id}\"\n",
+    "        link = f\"https://open.spotify.com/track/{spotify_id[0]}\"\n",
     "        print(f\"{link}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "https://open.spotify.com/track/6FRwDxXsvSasw0y2eDArsz\n",
+      "https://open.spotify.com/track/1bp2IO61zbQrbWNmKKxg3f\n",
+      "https://open.spotify.com/track/3qiyyUfYe7CRYLucrPmulD\n",
       "https://open.spotify.com/track/5uvosCdMlFdTXhoazkTI5R\n",
-      "https://open.spotify.com/track/6mHOcVtsHLMuesJkswc0GZ\n",
-      "https://open.spotify.com/track/4KfSdst7rW39C0sfhArdrz\n",
-      "https://open.spotify.com/track/3YuaBvuZqcwN3CEAyyoaei\n",
-      "https://open.spotify.com/track/08mG3Y1vljYA6bvDt4Wqkj\n"
+      "https://open.spotify.com/track/6mHOcVtsHLMuesJkswc0GZ\n"
      ]
     }
    ],
    "source": [
-    "make_link(ans1)"
+    "make_link(ans)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "1. 5uvosCdMlFdTXhoazkTI5R\n",
-      "2. 6mHOcVtsHLMuesJkswc0GZ\n",
-      "3. 4KfSdst7rW39C0sfhArdrz\n",
-      "4. 3YuaBvuZqcwN3CEAyyoaei\n",
-      "5. 08mG3Y1vljYA6bvDt4Wqkj\n",
-      "\n"
+      "['6FRwDxXsvSasw0y2eDArsz', '5uvosCdMlFdTXhoazkTI5R', '6mHOcVtsHLMuesJkswc0GZ', '0sgDEFq9oeC8ueOK0mR5IA', '4KfSdst7rW39C0sfhArdrz', '5uvosCdMlFdTXhoazkTI5R', '4KfSdst7rW39C0sfhArdrz', '3YuaBvuZqcwN3CEAyyoaei', '08mG3Y1vljYA6bvDt4Wqkj']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def extract_spotify_ids(strings):\n",
+    "    # Regular expression pattern to match Spotify IDs\n",
+    "    pattern = r\"(?:Spotify ID|spotify_id)[:\\s]*\\\"?([a-zA-Z0-9_-]{22})\\\"?\"\n",
+    "\n",
+    "    # Extracting Spotify IDs\n",
+    "    spotify_ids = []\n",
+    "    for string in strings:\n",
+    "        match = re.search(pattern, string)\n",
+    "        if match:\n",
+    "            spotify_ids.append(match.group(1))\n",
+    "\n",
+    "    return spotify_ids\n",
+    "\n",
+    "# Example usage:\n",
+    "strings = [\n",
+    "    \"1. \\\"Yesterday\\\" by The Beatles (page 17, row 1) - Spotify ID: 6FRwDxXsvSasw0y2eDArsz\",\n",
+    "    \"2. \\\"The Sound of Silence\\\" by Simon & Garfunkel (page 18, row 2) - Spotify ID: 5uvosCdMlFdTXhoazkTI5R\",\n",
+    "    \"3. \\\"Imagine\\\" by John Lennon (page 19, row 1) - Spotify ID: 6mHOcVtsHLMuesJkswc0GZ\",\n",
+    "    \"4. \\\"Hallelujah\\\" by Leonard Cohen (page 20, row 2) - Spotify ID: 0sgDEFq9oeC8ueOK0mR5IA\",\n",
+    "    \"5. \\\"Someone Like You\\\" by Adele (page 20, row 3) - Spotify ID: 4KfSdst7rW39C0sfhArdrz\",\n",
+    "    \"6. \\\"Light My Fire\\\" by The Doors (spotify_id: 5uvosCdMlFdTXhoazkTI5R)\",\n",
+    "    \"7. \\\"The Logical Song - 2010 Remastered\\\" by Supertramp (spotify_id: mHOcVtsHLMuesJkswc0GZ)\",\n",
+    "    \"8. \\\"Barracuda\\\" by Heart (spotify_id: 4KfSdst7rW39C0sfhArdrz)\",\n",
+    "    \"9. \\\"Like a Stone\\\" by Audioslave (spotify_id: 3YuaBvuZqcwN3CEAyyoaei)\",\n",
+    "    \"10. \\\"Back In Black\\\" by AC/DC (spotify_id: 08mG3Y1vljYA6bvDt4Wqkj)\"\n",
+    "]\n",
+    "\n",
+    "spotify_ids = extract_spotify_ids(strings)\n",
+    "print(spotify_ids)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6FRwDxXsvSasw0y2eDArsz\n",
+      "6FRwDxXsvSasw0y2eDArsz\n",
+      "4KfSdst7rW39C0sfhArdrz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:6: SyntaxWarning: invalid escape sequence '\\_'\n",
+      "<>:7: SyntaxWarning: invalid escape sequence '\\_'\n",
+      "<>:6: SyntaxWarning: invalid escape sequence '\\_'\n",
+      "<>:7: SyntaxWarning: invalid escape sequence '\\_'\n",
+      "/var/folders/1l/pycwvg157rv_sn0s68n1_y8c0000gn/T/ipykernel_84841/4172587299.py:6: SyntaxWarning: invalid escape sequence '\\_'\n",
+      "  'spotify\\_id: \"6FRwDxXsvSasw0y2eDArsz\")',\n",
+      "/var/folders/1l/pycwvg157rv_sn0s68n1_y8c0000gn/T/ipykernel_84841/4172587299.py:7: SyntaxWarning: invalid escape sequence '\\_'\n",
+      "  'rt (spotify\\_id: 4KfSdst7rW39C0sfhArdrz)'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "# Sample longer strings\n",
+    "longer_strings = [\n",
+    "    \"1. \\\"Yesterday\\\" by The Beatles (page 17, row 1) - Spotify ID: 6FRwDxXsvSasw0y2eDArsz\",\n",
+    "    'spotify\\_id: \"6FRwDxXsvSasw0y2eDArsz\")',\n",
+    "    'rt (spotify\\_id: 4KfSdst7rW39C0sfhArdrz)'\n",
+    "]\n",
+    "\n",
+    "# Regex pattern\n",
+    "regex_pattern = r'\\b[A-Za-z0-9]{22}\\b'\n",
+    "\n",
+    "# Extract alphanumeric strings of length 22 from longer strings\n",
+    "for string in longer_strings:\n",
+    "    matches = re.findall(regex_pattern, string)\n",
+    "    for match in matches:\n",
+    "        print(match)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6FRwDxXsvSasw0y2eDArsz\n",
+      "1bp2IO61zbQrbWNmKKxg3f\n",
+      "5uvosCdMlFdTXhoazkTI5R\n",
+      "6mHOcVtsHLMuesJkswc0GZ\n",
+      "4KfSdst7rW39C0sfhArdrz\n",
+      "3YuaBvuZqcwN3CEAyyoaei\n",
+      "08mG3Y1vljYA6bvDt4Wqkj\n",
+      "6s0yNmp4Hd32wGx40T6uL8\n",
+      "4bz7uB4edifWKJXSDxwHcs\n",
+      "1pUFYb9peWkK8m1WCKNRjp\n",
+      "6DxKG8EHEqkWdKrFQSvm32\n",
+      "67Hna13dNDkZvBpTXRIaOJ\n",
+      "3qiyyUfYe7CRYLucrPmulD\n",
+      "5uvosCdMlFdTXhoazkTI5R\n",
+      "6mHOcVtsHLMuesJkswc0GZ\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def extract_spotify_id(text):\n",
+    "    pattern = r\"(?:Spotify ID|spotify_id)[:\\s]*\\\"?([a-zA-Z0-9_-]{22})\\\"?\"\n",
+    "    match = re.search(pattern, text)\n",
+    "    if match:\n",
+    "        return match.group(1)\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "\n",
+    "# Test the function with your examples\n",
+    "strings = [\n",
+    "    \"\\\"Yesterday\\\" by The Beatles (page 17, row 1, spotify_id: \\\"6FRwDxXsvSasw0y2eDArsz\\\")\",\n",
+    "    \"\\\"Imagine\\\" by John Lennon (page 17, row 2, spotify_id: \\\"1bp2IO61zbQrbWNmKKxg3f\\\")\",\n",
+    "    \"\\\"Light My Fire\\\" by The Doors (spotify_id: 5uvosCdMlFdTXhoazkTI5R)\",\n",
+    "    \"\\\"The Logical Song - 2010 Remastered\\\" by Supertramp (spotify_id: 6mHOcVtsHLMuesJkswc0GZ)\",\n",
+    "    \"\\\"Barracuda\\\" by Heart (spotify_id: 4KfSdst7rW39C0sfhArdrz)\",\n",
+    "    \"\\\"Like a Stone\\\" by Audioslave (spotify_id: 3YuaBvuZqcwN3CEAyyoaei)\",\n",
+    "    \"\\\"Back In Black\\\" by AC/DC (spotify_id: 08mG3Y1vljYA6bvDt4Wqkj)\",\n",
+    "    \"\\\"Kinetic (The Crystal Method vs. Dada Life)\\\" by The Crystal Method, with a danceability score of 0.616. Spotify ID: 6s0yNmp4Hd32wGx40T6uL8\",\n",
+    "    \"\\\"Galvanize\\\" by The Chemical Brothers, with a danceability score of 0.745. Spotify ID: 4bz7uB4edifWKJXSDxwHcs\",\n",
+    "    \"\\\"God Is a DJ\\\" by Faithless, with a danceability score of 0.606. Spotify ID: 1pUFYb9peWkK8m1WCKNRjp\",\n",
+    "    \"\\\"In Yer Face - Bicep Remix\\\" by 808 State, with a danceability score of 0.616. Spotify ID: 6DxKG8EHEqkWdKrFQSvm32\",\n",
+    "    \"\\\"Teardrop\\\" by Massive Attack, with a danceability score of 0.615. Spotify ID: 67Hna13dNDkZvBpTXRIaOJ\",\n",
+    "    \"\\\"Hallelujah\\\" by Leonard Cohen (page 17, row 3, spotify_id: \\\"3qiyyUfYe7CRYLucrPmulD\\\")\",\n",
+    "    \"\\\"Someone Like You\\\" by Adele (page 18, row 1, spotify_id: \\\"5uvosCdMlFdTXhoazkTI5R\\\")\",\n",
+    "    \"\\\"Fix You\\\" by Coldplay (page 18, row 2, spotify_id: \\\"6mHOcVtsHLMuesJkswc0GZ\\\")\"\n",
+    "]\n",
+    "\n",
+    "for string in strings:\n",
+    "    print(extract_spotify_id(string))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ignore below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(\"6DxKG8EHEqkWdKrFQSvm32\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#convert to list of string\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. https://open.spotify.com/track/s\n",
+      "2. https://open.spotify.com/track/p\n",
+      "3. https://open.spotify.com/track/o\n",
+      "4. https://open.spotify.com/track/t\n",
+      "5. https://open.spotify.com/track/i\n",
+      "6. https://open.spotify.com/track/f\n",
+      "7. https://open.spotify.com/track/y\n",
+      "8. https://open.spotify.com/track/_\n",
+      "9. https://open.spotify.com/track/i\n",
+      "10. https://open.spotify.com/track/d\n",
+      "11. https://open.spotify.com/track/s\n"
      ]
     }
    ],
@@ -333,7 +567,7 @@
     "    return f\"https://open.spotify.com/track/{spotify_id}\"\n",
     "\n",
     "# Output the clickable links\n",
-    "for idx, spotify_id in enumerate(\"spotify_ids\", start=1):\n",
+    "for idx, spotify_id in enumerate(spotify_ids, start=1):\n",
     "    link = spotify_id_to_link(spotify_id)\n",
     "    print(f\"{idx}. {link}\")\n"
    ]
