--- a/archive/archive_model/model_basic.ipynb
+++ b/archive/archive_model/model_basic.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -54,12 +54,19 @@
       "3  7lUE02KHkZM44BZgjCaWRO            Meet in the Middle    Diamond Rio     4   \n",
       "4  1ecIqo8pOc8S6y3l80iGxd                         Fancy  Reba McEntire     5   \n",
       "\n",
-      "     Genre  \n",
-      "0  country  \n",
-      "1  country  \n",
-      "2  country  \n",
-      "3  country  \n",
-      "4  country  \n",
+      "     Genre  danceability  energy  loudness  speechiness  acousticness  \\\n",
+      "0  country         0.714   0.522    -9.773       0.0283        0.4550   \n",
+      "1  country         0.708   0.524   -12.644       0.0352        0.0551   \n",
+      "2  country         0.595   0.653    -4.935       0.0265        0.2460   \n",
+      "3  country         0.746   0.443   -11.305       0.0359        0.6630   \n",
+      "4  country         0.675   0.540   -10.139       0.0774        0.2040   \n",
+      "\n",
+      "   instrumentalness  liveness  valence    tempo  \n",
+      "0          0.000010    0.0967    0.690  121.312  \n",
+      "1          0.000003    0.0371    0.690  111.482  \n",
+      "2          0.000000    0.2640    0.542  128.930  \n",
+      "3          0.000000    0.2230    0.554   91.110  \n",
+      "4          0.000000    0.0688    0.514   94.959  \n",
       "Users:\n",
       "     UserID  Password                 Name Genre_1  Genre_2  Genre_3\n",
       "0     sibyl  7S02NXS3           Sibyl Bode    rock      r&b      pop\n",
@@ -97,9 +104,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Server version 1.4.10 doesn't match client version 1.4.9: unexpected errors may occur.\n",
+      "Please install the correct version of H2OGPTE with `pip install h2ogpte==1.4.10`.\n",
+      "You can enable strict version checking by passing strict_version_check=True.\n"
+     ]
+    }
+   ],
    "source": [
     "client = H2OGPTE(\n",
     "    address='https://h2ogpte.genai.h2o.ai',\n",
@@ -109,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,23 +151,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Job(id='782b4a5a-0694-4230-92f6-85033c866317', name='Adding documents', passed=1.0, failed=0.0, progress=1.0, completed=True, canceled=False, date=datetime.datetime(2024, 4, 7, 4, 18, 10, tzinfo=TzInfo(UTC)), kind=<JobKind.IngestUploadsJob: 'IngestUploadsJob'>, statuses=[JobStatus(id='a3624524b3444461893c715976f10ce6', status='Indexing done.'), JobStatus(id='eb7cc35f5c284ae38b2df4a30a90d0ae', status='Collecting done.')], errors=[], last_update_date=datetime.datetime(2024, 4, 7, 4, 18, 32, tzinfo=TzInfo(UTC)), duration='22s', duration_seconds=22.0)"
+       "Job(id='766d88c2-f378-4870-b945-4eccf59693f6', name='Adding documents', passed=1.0, failed=0.0, progress=1.0, completed=True, canceled=False, date=datetime.datetime(2024, 4, 7, 11, 54, 27, tzinfo=TzInfo(UTC)), kind=<JobKind.IngestUploadsJob: 'IngestUploadsJob'>, statuses=[JobStatus(id='e684c2e859fa46c5b6ca0186c5d6678c', status='Indexing done.'), JobStatus(id='2d2dbfdf1fa9407ea8ac0b164bfbf02d', status='Indexing done.')], errors=[], last_update_date=datetime.datetime(2024, 4, 7, 11, 54, 51, tzinfo=TzInfo(UTC)), duration='24s', duration_seconds=24.0)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Upload\n",
-    "songs_data = client.upload('songs_short.txt', songs_txt.encode())\n",
+    "songs_data = client.upload('songs_short.xlsx', open('../../data/songs_short.xlsx', 'rb'))\n",
     "user_data = client.upload('user.txt', user_txt.encode())\n",
     "history_data = client.upload('listening_history.txt', history_txt.encode())\n",
     "\n",
@@ -167,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,12 +193,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Initiate Chat\n",
     "chat_session_id = client.create_chat_session(collection_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with client.connect(chat_session_id) as session:\n",
+    "    answer = session.query(\n",
+    "        message= \"My favourite genre is Rap, Pop and KPop. Recommend me 1 song each.\",\n",
+    "        system_prompt='Reccommend songs in the songs_short.xlsx document only, and provide spotify_id after each song',\n",
+    "        rag_config={\"rag_type\": \"rag\"},\n",
+    "    ).content\n",
+    "    \n",
+    "    reccommendations = answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def id_extract(text):\n",
+    "    lines = text.split('\\n')\n",
+    "    lines = [line.strip() for line in lines if line.strip()]\n",
+    "    regex_pattern =  r'\\b[A-Za-z0-9]{22}\\b'\n",
+    "\n",
+    "    # Extracting Spotify IDs\n",
+    "    spotify_ids = []\n",
+    "    for string in lines:\n",
+    "        match = re.findall(regex_pattern, string)\n",
+    "        if match:\n",
+    "            spotify_ids.append(match)\n",
+    "    \n",
+    "    #output clickable links\n",
+    "    for idx, spotify_id in enumerate(spotify_ids, start=1):\n",
+    "        link = f\"https://open.spotify.com/track/{spotify_id[0]}\"\n",
+    "        print(f\"{link}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3624630648.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[48], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    curl -X POST \"https://accounts.spotify.com/api/token\" \\\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "curl -X POST \"https://accounts.spotify.com/api/token\" \\\n",
+    "     -H \"Content-Type: application/x-www-form-urlencoded\" \\\n",
+    "     -d \"grant_type=client_credentials&client_id=YOUR_CLIENT_ID&client_secret=YOUR_CLIENT_SECRET\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Archive testing"
    ]
   },
   {
@@ -589,7 +673,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
