fixed redirect for reccommendation page

--- a/archive/archive_model/model_basic.ipynb
+++ b/archive/archive_model/model_basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,6 +458,38 @@
    "metadata": {},
    "source": [
     "# Link extraction testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Youtube\n",
+    "def convert_to_youtube_search_query(x):\n",
+    "    input_string = re.sub(r'[^a-zA-Z0-9\\s]', '', x)\n",
+    "    cleaned_string = ''.join(char for char in input_string if char.isalnum() or char.isspace())\n",
+    "    query = '+'.join(cleaned_string.split())\n",
+    "    youtube_search_query = f\"https://www.youtube.com/results?search_query={query}\"\n",
+    "    return youtube_search_query"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.youtube.com/results?search_query=waifu+dance+love+you\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(convert_to_youtube_search_query('waifu dance !!!! love you'))"
    ]
   },
   {
