--- a/archive/archive_model/model.ipynb
+++ b/archive/archive_model/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,17 +68,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DONE: cf6a560d-433e-4924-8799-2de7aeb2e7c8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "collection_id = ingest_documents(client)\n",
     "chat_session_id = client.create_chat_session(collection_id)"
@@ -249,23 +241,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = \"You are an AI chatbot that reccommend songs base on user message. You take in query and find similar songs base on favourite genre and listening history of user which can be found in listening_history.xlsx by userid provided. You must reccommend songs in the song.xlsx, a file contains data with columns for Spotify ID, Song name, Artist, Rank, Genre, danceability, energy, loudness, speechiness, acousticness, instrumentalness, liveness, valence, and tempo. And you must return song name in double quotation, artist name in brackets, along with spotify id. Must return song name, song artist and spotify id.\""
+    "prompt = \"As an AI chatbot, you recommend songs based on user queries. You will first analyze the user's favorite genre and listening history, which can be accessed in the listening_history.xlsx file using the provided user ID. Then, you will match these preferences with similar songs from the song.xlsx file. This file includes data on Spotify ID, Song name, Artist, Rank, Genre, danceability, energy, loudness, speechiness, acousticness, instrumentalness, liveness, valence, and tempo. When recommending songs, you must provide the song name within double quotation marks, the artist name, and the Spotify ID that is a 22 alphanumeric word.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "prompt_template_id = client.create_prompt_template(\n",
     "    name=\"Song Recommendation Template\",\n",
     "    description=\"Template for recommending songs\",\n",
-    "    system_prompt = \"You are an AI chatbot that reccommend songs base on user message. You take in query and find similar songs base on favourite genre and listening history of user which can be found in listening_history.xlsx by userid provided. You must reccommend songs in the song.xlsx, a file contains data with columns for Spotify ID, Song name, Artist, Rank, Genre, danceability, energy, loudness, speechiness, acousticness, instrumentalness, liveness, valence, and tempo. And you must return song name in double quotation, artist name in brackets, along with spotify id. Must return song name, song artist and spotify id.\",\n",
+    "    system_prompt = prompt,\n",
     "    pre_prompt_query=\"Before providing recommendations, please provide your favorite music genre and userid.\",\n",
     "    prompt_query=\"Reccommend me a max of 5 songs based on my favourite genre with spotify id that is not in my lsitening history.\"\n",
     ")\n"
@@ -273,16 +265,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'cf6a560d-433e-4924-8799-2de7aeb2e7c8'"
+       "'356147d7-f116-439e-9aab-90fcf8726c67'"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,16 +285,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PromptTemplate(is_default=False, id='83b6014e-a970-4dae-9b2b-e99e7cf0dd3b', name='Song Recommendation Template', description='Template for recommending songs', lang=None, system_prompt='You are an AI chatbot that reccommend songs base on user message. You take in query and find similar songs base on favourite genre and listening history of user which can be found in listening_history.xlsx by userid provided. You must reccommend songs in the song.xlsx, a file contains data with columns for Spotify ID, Song name, Artist, Rank, Genre, danceability, energy, loudness, speechiness, acousticness, instrumentalness, liveness, valence, and tempo. And you must return song name in double quotation, artist name in brackets, along with spotify id. Must return song name, song artist and spotify id.', pre_prompt_query='Before providing recommendations, please provide your favorite music genre and userid.', prompt_query='Reccommend me a max of 5 songs based on my favourite genre with spotify id that is not in my lsitening history.', hyde_no_rag_llm_prompt_extension=None, pre_prompt_summary=None, prompt_summary=None, system_prompt_reflection=None, pre_prompt_reflection=None, prompt_reflection=None, auto_gen_description_prompt=None, auto_gen_document_summary_pre_prompt_summary=None, auto_gen_document_summary_prompt_summary=None, auto_gen_document_sample_questions_prompt=None, default_sample_questions=None, created_at=datetime.datetime(2024, 4, 12, 18, 8, 37, 705050, tzinfo=TzInfo(UTC)))"
+       "PromptTemplate(is_default=False, id='f66d35a0-1049-4a46-8245-fea00415b200', name='Song Recommendation Template', description='Template for recommending songs', lang=None, system_prompt=\"As an AI chatbot, you recommend songs based on user queries. You will first analyze the user's favorite genre and listening history, which can be accessed in the listening_history.xlsx file using the provided user ID. Then, you will match these preferences with similar songs from the song.xlsx file. This file includes data on Spotify ID, Song name, Artist, Rank, Genre, danceability, energy, loudness, speechiness, acousticness, instrumentalness, liveness, valence, and tempo. When recommending songs, you must provide the song name within double quotation marks, the artist name, and the Spotify ID that is a 22 alphanumeric word.\", pre_prompt_query='Before providing recommendations, please provide your favorite music genre and userid.', prompt_query='Reccommend me a max of 5 songs based on my favourite genre with spotify id that is not in my lsitening history.', hyde_no_rag_llm_prompt_extension=None, pre_prompt_summary=None, prompt_summary=None, system_prompt_reflection=None, pre_prompt_reflection=None, prompt_reflection=None, auto_gen_description_prompt=None, auto_gen_document_summary_pre_prompt_summary=None, auto_gen_document_summary_prompt_summary=None, auto_gen_document_sample_questions_prompt=None, default_sample_questions=None, created_at=datetime.datetime(2024, 4, 12, 18, 54, 39, 752093, tzinfo=TzInfo(UTC)))"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,27 +305,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Based on your preference for pop music and request for dance songs, here are three song recommendations with their Spotify IDs:\n",
+      "Based on your preference for dance music, here are five song recommendations with their Spotify IDs that are not in your listening history:\n",
       "\n",
-      "1. \"Work From Home\" by Fifth Harmony - 6UkMcAA19lTdjs22jtB7o2\n",
-      "2. \"Can't Stop The Feeling!\" by Justin Timberlake - 48no41hFQ2y0I4vDGjPPeC\n",
-      "3. \"Worth It\" by Fifth Harmony - 5vPRCX0Bj8O374jTCAQRLS\n",
+      "1. \"Get Lucky\" by Daft Punk (Spotify ID: 6rqhFgbbKwnb9MLmUQDhBI)\n",
+      "2. \"Don't Stop the Music\" by Rihanna (Spotify ID: 4cO5pRvC5z6UQiYOuTqo4C)\n",
+      "3. \"One More Time\" by Daft Punk (Spotify ID: 6rqhFgbbKwnb9MLmUQDhBI)\n",
+      "4. \"Clarity\" by Zedd ft. Foxes (Spotify ID: 5vIuDIiXz2sRoQ0AXq84aI)\n",
+      "5. \"Titanium\" by David Guetta ft. Sia (Spotify ID: 6rqhFgbbKwnb9MLmUQDhBI)\n",
       "\n",
-      "These songs have high energy and danceability scores, making them great choices for dancing. Enjoy listening!\n"
+      "These songs have high danceability scores and are popular choices in the dance music genre. Enjoy listening!\n"
      ]
     }
    ],
    "source": [
     "with client.connect(chat_session_id) as session:\n",
     "    answer = session.query(\n",
-    "        message=\"I like pop give me 3 dance songs\",\n",
+    "        message=\"Some dance songs\",\n",
     "        rag_config={\"rag_type\": \"rag\"},\n",
     "    ).content\n",
     "\n",
